auth service added
Single micro service for all APIs
