# src/main/java/com/ngts/auth/entity/dto/UsersDTO.java
@@ -1,0 +1,19 @@
+package com.ngts.auth.entity.dto;
+
+
+import lombok.Data;
+import java.io.Serializable;
+
+@Data
+public class UsersDTO implements Serializable {
+    private static final long serialVersionUID = 1L;
+
+    private Integer id;
+
+    private String email;
+
+    private String password;
+
+    private String username;
+
+}
